# openvidia

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  install.sh  openvidia.desktop  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: ci.yml  deploy.yml
openvidia/: __init__.py  __main__.py  _upstream_utils.py  account_manager.py  anthropic_shim.py  cdp_keygen.py  compaction.py  config.py  enhanced_logging.py  key_factory.py  key_validation.py  proxy_app.py  proxy_state.py  responses_shim.py  safe_file.py  server_manager.py  webui.py
openvidia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openwiki/: _plan.md  architecture.md  operations.md  quickstart.md
packaging/arch/: PKGBUILD
tests/: test_compaction_cache.py  test_proxy.py  test_validation.py
web/: index.html  main.js  styles.css
