[project]
name = "openvidia"
version = "2.0.0"
description = "NVIDIA NIM multi-key proxy with smart rate limiting, cooldown management, and web dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[http2]>=0.27",
    "psutil>=6.0",
    "playwright>=1.40",
    "websockets>=12.0",
    "pywebview>=5.0",
    "PyGObject>=3.42; platform_system=='Linux'",
    "pycairo>=1.20; platform_system=='Linux'",
]
license = "MIT"
authors = [{ name = "Ciro Autuori" }]
keywords = ["nvidia", "nim", "proxy", "rate-limiting", "api-gateway", "opencode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
desk = ["pywebview>=5.0", "PyGObject>=3.42; platform_system=='Linux'"]

[project.scripts]
openvidia = "openvidia.__main__:main"

[tool.setuptools.packages.find]
include = ["openvidia*"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
