[project]
name = "openvidia"
version = "2.0.0"
description = "NVIDIA NIM multi-key proxy with smart rate limiting, cooldown management, and desktop dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[http2]>=0.27",
    "psutil>=6.0",
    "pywebview>=5.0",
    "PyGObject>=3.42; platform_system=='Linux'",
    "pycairo>=1.20; platform_system=='Linux'",
    "PyQt6>=6.5; platform_system=='Linux'",
    "PyQt6-WebEngine>=6.5; platform_system=='Linux'",
    "qtpy>=2.4; platform_system=='Linux'",
    "pyqt6-webengine>=6.11.0",
]
license = "MIT"
authors = [{ name = "Ciro Autuori" }]
keywords = ["nvidia", "nim", "proxy", "rate-limiting", "api-gateway", "opencode", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
auto-regen = ["playwright>=1.40", "websockets>=12.0"]

[project.scripts]
openvidia = "openvidia.__main__:main"

[tool.setuptools.packages.find]
include = ["openvidia*"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
